Fix spacing

--- a/src/components/ItemDetail/ItemDetail.module.scss
+++ b/src/components/ItemDetail/ItemDetail.module.scss
@@ -16,6 +16,8 @@
 
 .content {
     @include gridContent(2, 12);
+    padding-bottom: $spacing-large;
+    margin-bottom: $spacing-large;
 }
 
 .card {
