--- a/src/components/SearchResults/SearchResults.module.scss
+++ b/src/components/SearchResults/SearchResults.module.scss
@@ -17,4 +17,5 @@
 .content {
     @include gridContent(2, 12);
     margin-bottom: $spacing-large;
+    padding-bottom: $spacing-large;
 }
